# fmri-physio-log

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: linter.yaml  publish.yaml  publish_pypi.yaml  superlinter.yaml  test.yaml  type-check.yaml
fmri_physio_log/: __init__.py  constants.py  fmri_physio_log.py
samples/full/: example_01.puls  example_02.puls  example_02.resp  example_03.puls  t.ecg  t.ext  t.resp
samples/short/: example_01.ecg  t.ext  t.puls  t.resp
src/: fmri_physio_log.py  grammar.lark
src/fmri_physio_log/: __init__.py  _generated.py
tests/: conftest.py  fmri_physio_log_test.py  test_fmri_physio_log.py
tests/data/: sample.puls  sample_with_ext2.puls
